# SFML-and-CMake-config

./: CMakeLists.txt  README
src/: main.cpp
